--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -1,6 +1,6 @@
 .button{
     padding: 10px 15px;
-    background: var(-tg-theme-buton-color);
+    background: var(-tg-theme-button-color);
     color: var(--tg-theme-text-color);
     border: none;
     outline: none;
